--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   "license": "ISC",
   "dependencies": {
     "@openzeppelin/contracts": "^4.5.0",
-    "jquery-csv": "^1.0.21"
+    "jquery-csv": "^1.0.21",
+    "web3": "^1.0.0-beta.31"
   },
   "repository": {
     "type": "git",
@@ -25,6 +26,5 @@
   "bugs": {
     "url": "https://github.com/ste10398/BlockchainProject2022/issues"
   },
-  "homepage": "https://github.com/ste10398/BlockchainProject2022#readme",
-  "devDependencies": {}
+  "homepage": "https://github.com/ste10398/BlockchainProject2022#readme"
 }
